<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimary"
    >
    <!--
    ****notas****
    densificar la imagen (difirentes tamaños)
    plugin drawable ..! para la dencificacion


    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        >
        <RelativeLayout

            android:layout_weight="0.6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:background="@mipmap/ic_launcher"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true"
            >

            <LinearLayout

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/paddig_horizontal_login"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nome_user"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite"

                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_pasword"
                        />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:textColor="@color/colorIcons"
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_login"
                    android:theme="@style/RaisedButtonDark"

                    />

                <RelativeLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/dontHeveAcount"
                        android:text="@string/dont_have_account"
                        android:textColor="@color/colorDivider"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/createaccount"
                        android:text="@string/create_here"
                        android:textColor="@color/colorDivider"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/dontHeveAcount"
                        android:onClick="goCreateAccount"
                        />
                </RelativeLayout>


            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>