<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimary"
    android:id="@+id/coordinatorFather">
    <!--
    ****notas****
    densificar la imagen (difirentes tamaños)
    plugin drawable ..! para la dencificacion


    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout

            android:layout_weight="0.6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:background="@drawable/chat_logo"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">

            <LinearLayout

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/paddig_horizontal_login">


                <Button
                    android:textColor="@color/colorIcons"
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_login"
                    android:theme="@style/RaisedButtonDark"
                    android:drawableLeft="@mipmap/ic_google"
                    android:drawablePadding="-9dp" />

                <RelativeLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/dontHeveAcountOne"
                        android:text="@string/dont_have_account"
                        android:textColor="@color/colorDivider"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/CreateaccountOne"
                        android:text="@string/create_here"
                        android:textColor="@color/colorDivider"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/dontHeveAcountOne"

                        />
                </RelativeLayout>

                <RelativeLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/dontHeveAcount"
                        android:text="@string/dont_have_account"
                        android:textColor="@color/colorDivider"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/Createaccount"
                        android:text="@string/create_here"
                        android:textColor="@color/colorDivider"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/dontHeveAcount"

                        />
                </RelativeLayout>


            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
